--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,7 @@ body {
   float: left;
 	height: 90px;
 	text-align: center;
-  text-decoration: none;
+  text-decoration: none !important;
   background-color: #4aaaa5;
 	padding: 30px;
 	font-weight: bold;
@@ -78,7 +78,7 @@ body {
 
 .headerLinks {
   display: inline-block;
-	text-decoration: none;	
+	text-decoration: none !important;	
 	color: #ada7aa;
 	font-size: 20px;
 	/*margin-right: 30px;*/
@@ -170,23 +170,21 @@ body {
   margin-right: 0;
 }
 
-footer {
-	clear: both;
-/*	position: fixed;
-	bottom: 0;
-	left: 0;*/
-	text-align: center;
+.myfooter {
+	clear: both; 
 	background-color: #666666;
+  text-align: center;
 	border-width: 8px 0px 0px 0px	;
 	border-style: solid;
 	border-color: #4aaaa5;
 	width: 100%;
-	height: 90px;
+	height: 70px;
 	font-family: 'Georgia', Times, Times New Roman, serif;
 	font-size: 	15px;
-	padding-top: 30px;
+	padding-top: 20px;
 	color: #fff;
 }
+
 
 /*    CSS for Contact Only   */
 /*label {
